[package]
name = "codex-providers"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.11"
dirs = "5.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.10"
toml = "0.8"
toml_edit = "0.22"
url = "2.5"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }
winreg = "0.52"

[build-dependencies]
winres = "0.1.12"
